--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   background-color: #181617;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
+  font-weight: 400;
   line-height: 140%;
   color: white;
 }
@@ -55,8 +56,105 @@ a {
   /*outline: 1px solid #066;*/
 }
 
+.container {
+  margin: 0 auto;
+  padding-left: 18px;
+  padding-right: 18px;
+  max-width: 320px;
+}
+
+/* Стили модулей общие */
+
 .module--light {
   background-color: #1F1C1D;
+}
+
+.module__title {
+  font-family: "Yeseva One", cursive;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: initial;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+  line-height: 100%;
+}
+
+.btn__link {
+  padding: 15px 18px 16px;
+  font-weight: 500;
+  font-size: 12px;
+  border: 0.5px solid #A07B50;
+}
+
+/* Логотип */
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+/* Промо-блок */
+
+.promo .container {
+  padding: 0;
+}
+
+.promo__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.promo__subheader {
+  margin: 0;
+  color: #A07B50;
+  line-height: 150%;
+}
+
+.promo__title {
+  margin: 0;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 36px;
+}
+
+.promo__slogan {
+  max-width: 230px;
+  margin: 0 auto;
+  text-align: center;
+  color: #A07B50;
+  margin-bottom: 40px;
+}
+
+.promo .social__list {
+  display: none;
+}
+
+.promo__link-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.promo__img {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.promo__img-wrap {
+  width: 275px;
+  height: 276px;
+  outline: 1px solid darkgray;
 }
 
 /* Питомцы */
